# DSlang

./: .gitignore  ASM.md  CMakeLists.txt  CMakeSettings.json  DS.md  README.md  main.cpp  version.h.in
compiler/: Compiler.cpp  Compiler.h  Lex.cpp  Lex.h  Parser.cpp  Parser.h  Token.cpp  Token.h
structures/: Commands.h
utils/: ArgumentParser.cpp  ArgumentParser.h  Constants.h  Regex.h  Settings.cpp  Settings.h
vm/: Element.cpp  Element.h  VirtualMachine.cpp  VirtualMachine.h
